--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -1,18 +1,3 @@
 [build-system]
-requires = ["flit"]
-build-backend = "flit.buildapi"
-
-[tool.flit.metadata]
-module = "{{ cookiecutter.package_name }}"
-author = "{{ cookiecutter.full_name }}"
-author-email = {{ cookiecutter.email }}
-home-page = "https://{{ cookiecutter.vcs_server }}/{{ cookiecutter.vcs_username }}/{{ cookiecutter.repo_name }}"
-requires = [
-]
-
-[tool.flit.metadata.requires-extra]
-test = ["pytest", "pytest-cov"]
-doc = ["sphinx"]
-dev = ["pre-commit", "prospector", "pylint", "yapf"]
-
-
+requires = ["setuptools>=40.8.0", "wheel"]
+build-backend = "setuptools.build_meta:__legacy__"
