set up poetry build tool branch

--- a/{{cookiecutter.repo_name}}/.bumpversion.cfg
+++ b/{{cookiecutter.repo_name}}/.bumpversion.cfg
@@ -5,7 +5,13 @@ tag = True
 
 [bumpversion:file:src/{{ cookiecutter.package_name }}/__init__.py]
 
-[bumpversion:file:setup.py]
+[bumpversion:file:pyproject.toml]
+search = [tool.poetry]
+	name = "{{ cookiecutter.package_name }}"
+	version = "{current_version}"
+replace = [tool.poetry]
+	name = "{{ cookiecutter.package_name }}"
+	version = "{new_version}"
 
 [bumpversion:file:CHANGELOG.md]
 parse = [Unreleased]
