--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -1,3 +1,21 @@
+[tool.poetry]
+name = "{{ cookiecutter.package_name }}"
+version = "0.0.0"
+description = "{{ cookiecutter.short_description }}"
+authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
+
+[tool.poetry.dependencies]
+python = "^3.4"
+attrdict
+
+[tool.poetry.dev-dependencies]
+pre-commit = "^1.14"
+prospector = "^1.1"
+yapf = "^0.25.0"
+bumpversion = "^0.5.3"
+pytest = "^4.2"
+pytest-cov = "^2.6"
+
 [build-system]
-requires = ["setuptools>=40.8.0", "wheel"]
-build-backend = "setuptools.build_meta:__legacy__"
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
