--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "{{ cookiecutter.package_name }}"
 version = "0.0.0"
-description = "{{ cookiecutter.short_description }}"
+description = "{{ cookiecutter.project_short_description }}"
 authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
 
 [tool.poetry.dependencies]
